BUGFIX: ZENA-908 Horizontal Scrollbar in data preview ZMOD UI ( if number of columns exceeds the window size)

--- a/zmm/src/App/ClientApp/src/styles.scss
+++ b/zmm/src/App/ClientApp/src/styles.scss
@@ -134,7 +134,7 @@ dt {
             top: 58px;
             left: 0;
             right: 0;
-            bottom: 0;
+            bottom: 40px;
             z-index: 0;
         }
     }
@@ -156,7 +156,7 @@ dt {
             top: 58px;
             left: 0;
             right: 0;
-            bottom: 0;
+            bottom: 40px;
             z-index: 0;
         }
     }
